--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "testing",
+  "homepage": "https://anton2-7.github.io/medical",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
