fix(package.json): changed url adress

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testing",
-  "homepage": "https://anton2-7.github.io/medical",
+  "homepage": "https://anton2-7.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
